[Sema] Don't look through CoerceExprs in markDirectCallee

Doing so prevented the coercion of a function with argument labels to a
user-written function type, as the latter cannot contain argument
labels. This commit changes the behaviour such that the referenced
function is considered to be unapplied, meaning it has its argument
labels stripped, therefore allowing the coercion.

Resolves SR-11429.